distribute new headers
or make nightly build a bit more happy


Former-commit-id: 6e372fd748ddf5a58beb0e08945a19111abc8c01

--- a/dune/alugrid/common/Makefile.am
+++ b/dune/alugrid/common/Makefile.am
@@ -9,6 +9,7 @@ alucommon_HEADERS = alugrid_assert.hh \
                     hsfc.hh \
 										intersectioniteratorwrapper.hh \
 										interfaces.hh \
+										ldbhandleif.hh \
                     macrogridview.hh \
 										memory.hh \
 										objectfactory.hh \
