--- a/dune/alugrid/impl/Makefile.am
+++ b/dune/alugrid/impl/Makefile.am
@@ -1,8 +1,8 @@
 impldir = $(includedir)/dune/alugrid/impl
-impl_HEADERS = indexstack.h projectvertex.h 
+impl_HEADERS = binaryio.hh indexstack.h projectvertex.h 
 
 SUBDIRS = serial parallel duneinterface 2d test
 
-EXTRA_DIST = starmpi.c
+EXTRA_DIST = binaryio.cc starmpi.c
 
 include $(top_srcdir)/am/global-rules
