put reading / writing of macro grid header into separate file
Former-commit-id: 8a80c2e2ef3d7bad38792695d7f0b7c78a6c6dac

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -13,6 +13,7 @@ libalugrid_2d_la_LIBADD =
 
 libalugrid_serial_la_SOURCES = \
 	$(top_srcdir)/dune/alugrid/impl/binaryio.cc \
+	$(top_srcdir)/dune/alugrid/impl/macrofileheader.cc \
 	$(top_srcdir)/dune/alugrid/impl/serial/ghost_info.cc \
 	$(top_srcdir)/dune/alugrid/impl/serial/gitter_geo.cc \
 	$(top_srcdir)/dune/alugrid/impl/serial/gitter_hexa_top.cc \
