added missing cc files.
Former-commit-id: 7d762b5ccc013732954634240a0d7a7f1a3bb6f4

--- a/dune/alugrid/impl/test/Makefile.am
+++ b/dune/alugrid/impl/test/Makefile.am
@@ -1,6 +1,8 @@
 check_PROGRAMS = sizes backuprestore
 
 ALUSOURCES = \
+  $(top_srcdir)/dune/alugrid/impl/binaryio.cc \
+  $(top_srcdir)/dune/alugrid/impl/macrofileheader.cc \
   $(top_srcdir)/dune/alugrid/impl/serial/gitter_geo.cc \
   $(top_srcdir)/dune/alugrid/impl/serial/gitter_hexa_top.cc \
   $(top_srcdir)/dune/alugrid/impl/serial/gitter_impl.cc \
