eliminating 2d and integrating it in 3d
Former-commit-id: 4a045a69384c24a75dea7b350ae8bb156c4f9305

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 AC_PREREQ(2.50)
 DUNE_AC_INIT
-AM_INIT_AUTOMAKE([foreign 1.5])
+#AM_INIT_AUTOMAKE([foreign 1.5])
 AC_CONFIG_SRCDIR([dune/alugrid/grid.hh])
 AM_CONFIG_HEADER([config.h])
 
