Finally fix the explicit template instantiation issue on OSX. Problem ist that weak symbols are only very badly supported by gcc in the land of the half-eaten apple.
Former-commit-id: b10e797393e2613c1ed44c37858ee1f019838491

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,7 +1,7 @@
 libalugrid_2d_la_SOURCES = \
 	$(top_srcdir)/dune/alugrid/impl/2d/grid.cc \
 	$(top_srcdir)/dune/alugrid/impl/2d/handle.cc \
-	$(top_srcdir)/dune/alugrid/impl/2d/hdlrw.cc \
+	$(top_srcdir)/dune/alugrid/impl/2d/hdlrw.h \
 	$(top_srcdir)/dune/alugrid/impl/2d/mknbrs.cc \
 	$(top_srcdir)/dune/alugrid/impl/2d/triang.cc \
 	$(top_srcdir)/dune/alugrid/impl/2d/vmmap.cc \
