improve the loadbalance/callback adaptation method
Former-commit-id: e9e05564ff3f485963af53802e50c6e500452dda

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -3,7 +3,7 @@ GRIDTYPE = ALUGRID_CUBE
 #GRIDTYPE = ALUGRID_CONFORM
 GRIDDIM = 3
 
-SUBDIRS = loadbalancing callback dgf
+SUBDIRS = loadbalance callback dgf
 
 EXTRA_DIST = alugrid.cfg 
 
