add a version using internal loadbalancing but with callback adaptation to examples/loadbalance and a bug fix
Former-commit-id: 952188758da096c613de53d52b73a5c7ad7a5792

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,9 +1,11 @@
+#GRIDTYPE = YASPGRID
+#GRIDTYPE = SGRID
 GRIDTYPE = ALUGRID_CUBE
 #GRIDTYPE = ALUGRID_SIMPLEX
 #GRIDTYPE = ALUGRID_CONFORM
 GRIDDIM = 3
 
-SUBDIRS = loadbalance callback dgf
+SUBDIRS = loadbalance dgf
 
 EXTRA_DIST = alugrid.cfg 
 
