move example with nonblocking comm to seperate directory and revert example code to "original setup". Keep local apply method to minimize difference to nonblocking example
Former-commit-id: 3008d41d6e8663b356908ba63daedf73f9700277

--- a/examples/communication/Makefile.am
+++ b/examples/communication/Makefile.am
@@ -5,7 +5,7 @@ GRIDTYPE = ALUGRID_CUBE
 #GRIDTYPE = ALUGRID_CONFORM
 GRIDDIM = 3
 
-SUBDIRS = loadbalance communication dgf
+SUBDIRS = loadbalance dgf
 
 EXTRA_DIST = alugrid.cfg 
 
@@ -14,8 +14,8 @@ CLEANFILES = $(DATACLEANFILES)
 
 #USE_OMP=-fopenmp
 
-examplesdir = $(includedir)/examples
-examples_HEADERS = \
+communicationdir = $(includedir)/examples/communication
+communication_HEADERS = \
   adaptation.hh        diagnostics.hh  piecewisefunction.hh  problem-euler.hh \
   problem-transport.hh datamap.hh      fvscheme.hh           problem-ball.hh \
   problem.hh           paralleldgf.hh
