--- a/configure.ac
+++ b/configure.ac
@@ -31,6 +31,7 @@ AC_CONFIG_FILES([
   examples/Makefile
   examples/dgf/Makefile
   examples/loadbalance/Makefile
+  examples/communication/Makefile
   utils/Makefile
   utils/convert-macrogrid/Makefile
   dune-alugrid.pc
