added sionlib backup/restore. Restore not yet working.
Former-commit-id: 6b105fc2f80e54d963af4581b2eb018304f35094

--- a/examples/backuprestore/Makefile.am
+++ b/examples/backuprestore/Makefile.am
@@ -5,7 +5,7 @@ DATACLEANFILES = dgfparser.log
 CLEANFILES = $(DATACLEANFILES)
 
 exampleslbdir = $(includedir)/examples/backuprestore
-exampleslb_HEADERS = 
+exampleslb_HEADERS = sionlib.hh
 
 # this does not compile with the old ALUGrid version
 if ! ALUGRID 
