add full support for pwf stored in consistent container (define USE_VECTOR_FOR_PWF to disable storage in persistent container)
Former-commit-id: a5342bc626ebac633614f2381a8635c44eba6059

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -14,6 +14,8 @@ CLEANFILES = $(DATACLEANFILES)
 
 #USE_OMP=-fopenmp
 
+# AM_CPPFLAGS += -DUSE_VECTOR_FOR_PWF
+
 examplesdir = $(includedir)/examples
 examples_HEADERS = \
   adaptation.hh        diagnostics.hh  piecewisefunction.hh  problem-euler.hh \
