a few bug fixes e.g. with the adaptation indicator on the boundary for the transport problem
Former-commit-id: 6d38f07a22ffa652cdd1503ec5958e8c8f9be33c

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -14,7 +14,10 @@ CLEANFILES = $(DATACLEANFILES)
 
 #USE_OMP=-fopenmp
 
-# AM_CPPFLAGS += -DUSE_VECTOR_FOR_PWF
+# extra flags: -DUSE_VECTOR_FOR_PWF -DNO_OUTPUT
+EXTRAFLAGS = 
+
+AM_CPPFLAGS += $(EXTRAFLAGS)
 
 examplesdir = $(includedir)/examples
 examples_HEADERS = \
