--- a/examples/loadbalance/Makefile.am
+++ b/examples/loadbalance/Makefile.am
@@ -3,13 +3,16 @@ GRIDDIM = 3
 
 DATACLEANFILES = dgfparser.log
 CLEANFILES = $(DATACLEANFILES)
-# AM_CPPFLAGS += -DUSE_VECTOR_FOR_PWF
+
+# possible problems are BALL, TRANSPORT, EULER
+PROBLEM = -DTRANSPORT
+# extra flags: -DUSE_VECTOR_FOR_PWF -DNO_OUTPUT
+EXTRAFLAGS = 
+AM_CPPFLAGS += $(EXTRAFLAGS) $(PROBLEM)
 
 exampleslbdir = $(includedir)/examples/loadbalanacing
 exampleslb_HEADERS = \
   adaptation.hh  loadbalance_simple.hh loadbalance_zoltan.hh
-
-headercheck_IGNORE = loadbalance_inline.hh
 
 # this does not compile with the old ALUGrid version
 if ! ALUGRID 
@@ -21,17 +24,17 @@ partition_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
 partition_LDADD = $(LDADD) $(DUNEMPILIBS)
 
 main_internal_SOURCES = main.cc
-main_internal_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DTRANSPORT
+main_internal_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) 
 main_internal_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
 main_internal_LDADD = $(LDADD) $(DUNEMPILIBS)
 
 main_simple_SOURCES = main.cc
-main_simple_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DUSE_SIMPLELB -DTRANSPORT
+main_simple_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DUSE_SIMPLELB 
 main_simple_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
 main_simple_LDADD = $(LDADD) $(DUNEMPILIBS)
 
 main_zoltan_SOURCES = main.cc
-main_zoltan_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DUSE_ZOLTANLB -DTRANSPORT
+main_zoltan_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DUSE_ZOLTANLB 
 main_zoltan_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
 main_zoltan_LDADD = $(LDADD) $(DUNEMPILIBS)
 endif
