--- a/configure.ac
+++ b/configure.ac
@@ -6,9 +6,9 @@ AM_CONFIG_HEADER([config.h])
 
 DUNE_CHECK_ALL
 
-AC_SUBST(AM_CPPFLAGS, "\${DUNE_CPPFLAGS} \${ALUGRID_CPPFLAGS} \${SIONLIB_CPPFLAGS} \${ZOLTAN_CPPFLAGS} \${PARMETIS_CPPFLAGS} \${METIS_INCLUDE}" )
-AC_SUBST(AM_LDFLAGS, "\${DUNE_LDFLAGS} \${SIONLIB_LDFLAGS} \${ZOLTAN_LDFLAGS} \${ALUGRID_LDFLAGS} \${PARMETIS_LDFLAGS} \${METIS_LDFLAGS} " )
-AC_SUBST([LDADD], "\$(top_builddir)/lib/libdunealugrid.la \${ALUGRID_LIBS} \${SIONLIB_LIBS} \${ZOLTAN_LIBS} \${DUNE_LIBS} \${PARMETIS_LIBS} \${METIS_LIB} ")
+AC_SUBST(AM_CPPFLAGS, "\${DUNE_CPPFLAGS} \${ALUGRID_CPPFLAGS} \${SIONLIB_CPPFLAGS} \${ZOLTAN_CPPFLAGS} \${PARMETIS_CPPFLAGS} \${METIS_INCLUDE} \${ZLIB_CPPFLAGS}" )
+AC_SUBST(AM_LDFLAGS, "\${DUNE_LDFLAGS} \${SIONLIB_LDFLAGS} \${ZOLTAN_LDFLAGS} \${ALUGRID_LDFLAGS} \${PARMETIS_LDFLAGS} \${METIS_LDFLAGS} \${ZLIB_LDFLAGS}" )
+AC_SUBST([LDADD], "\$(top_builddir)/lib/libdunealugrid.la \${ALUGRID_LIBS} \${SIONLIB_LIBS} \${ZOLTAN_LIBS} \${DUNE_LIBS} \${PARMETIS_LIBS} \${METIS_LIB} \${ZLIB_LIBS}")
 
 # generate Makefiles
 AC_CONFIG_FILES([
