implemented parallel write, still need adjustment of bnd segments.
Former-commit-id: e6ce6723a85b9728d0903ec6156d86b4db28d0a7

--- a/utils/convert-macrogrid/Makefile.am
+++ b/utils/convert-macrogrid/Makefile.am
@@ -1,5 +1,6 @@
-bin_PROGRAMS = alugrid-convert-macrogrid
+bin_PROGRAMS = alugrid-convert-macrogrid main
 
 alugrid_convert_macrogrid_SOURCES = main.cc
+main_SOURCES = main.cc
 
 include $(top_srcdir)/am/global-rules
