prganized different tests mentioned in paper into different subdirectories each with own script
Former-commit-id: b70d3eb722fa7fbdbc5e870bd159e0891c82cac5

--- a/configure.ac
+++ b/configure.ac
@@ -31,8 +31,10 @@ AC_CONFIG_FILES([
   examples/Makefile
   examples/dgf/Makefile
   examples/backuprestore/Makefile
+  examples/callback/Makefile
   examples/loadbalance/Makefile
   examples/communication/Makefile
+  examples/testEfficiency/Makefile
   utils/Makefile
   utils/convert-macrogrid/Makefile
   dune-alugrid.pc
