--- a/examples/communication/Makefile.am
+++ b/examples/communication/Makefile.am
@@ -14,18 +14,24 @@ CLEANFILES = $(DATACLEANFILES)
 
 #USE_OMP=-fopenmp
 
-# extra flags: -DUSE_VECTOR_FOR_PWF -DNO_OUTPUT
+# possible problems are BALL, TRANSPORT, EULER
+PROBLEM = TRANSPORT
+# extra flags: -DUSE_VECTOR_FOR_PWF -DNO_OUTPUT -DNON_BLOCKING
 EXTRAFLAGS = 
 
 AM_CPPFLAGS += $(EXTRAFLAGS)
 
-communicationdir = $(includedir)/examples/communication
-communication_HEADERS = \
-  adaptation.hh        diagnostics.hh  piecewisefunction.hh  problem-euler.hh \
-  problem-transport.hh datamap.hh      fvscheme.hh           problem-ball.hh \
-  problem.hh           paralleldgf.hh
+callbackdir = $(includedir)/examples/callback
+callback_HEADERS = \
+    adaptation.hh  diagnostics.hh  paralleldgf.hh        problem-ball.hh   problem-transport.hh \
+    datamap.hh     fvscheme.hh     piecewisefunction.hh  problem-euler.hh  problem.hh
 
-check_PROGRAMS = main_transport main_ball main_euler 
+check_PROGRAMS = main main_transport main_ball main_euler 
+
+main_SOURCES = main.cc
+main_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -D$(PROBLEM)
+main_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
+main_LDADD = $(LDADD) $(DUNEMPILIBS)
 
 main_transport_SOURCES = main.cc
 main_transport_CPPFLAGS = $(AM_CPPFLAGS) $(USE_OMP) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DTRANSPORT
