--- a/examples/testEfficiency/Makefile.am
+++ b/examples/testEfficiency/Makefile.am
@@ -1,30 +1,35 @@
-#GRIDTYPE = YASPGRID
-#GRIDTYPE = SGRID
 GRIDTYPE = ALUGRID_CUBE
 #GRIDTYPE = ALUGRID_SIMPLEX
 #GRIDTYPE = ALUGRID_CONFORM
 GRIDDIM = 3
 
-SUBDIRS = callback loadbalance dgf backuprestore communication testEfficiency
+SUBDIRS = 
 
-EXTRA_DIST = alugrid.cfg 
+#EXTRA_DIST = alugrid.cfg 
 
 DATACLEANFILES = dgfparser.log
 CLEANFILES = $(DATACLEANFILES)
 
 #USE_OMP=-fopenmp
 
-# extra flags: -DUSE_VECTOR_FOR_PWF -DNO_OUTPUT -DCALLBACK_ADAPTATION
+# possible problems are BALL, TRANSPORT, EULER
+PROBLEM = TRANSPORT
+# extra flags: -DUSE_VECTOR_FOR_PWF -DNO_OUTPUT -DNON_BLOCKING
 EXTRAFLAGS = 
 
 AM_CPPFLAGS += $(EXTRAFLAGS)
 
-examplesdir = $(includedir)/examples
-examples_HEADERS = \
+testefficiencydir = $(includedir)/examples/testEfficiency
+testefficiency_HEADERS = \
     adaptation.hh  diagnostics.hh  paralleldgf.hh        problem-ball.hh   problem-transport.hh \
     datamap.hh     fvscheme.hh     piecewisefunction.hh  problem-euler.hh  problem.hh
 
-check_PROGRAMS = main_transport main_ball main_euler 
+check_PROGRAMS = main main_transport main_ball main_euler 
+
+main_SOURCES = main.cc
+main_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -D$(PROBLEM)
+main_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
+main_LDADD = $(LDADD) $(DUNEMPILIBS)
 
 main_transport_SOURCES = main.cc
 main_transport_CPPFLAGS = $(AM_CPPFLAGS) $(USE_OMP) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DTRANSPORT
