--- a/utils/convert-macrogrid/Makefile.am
+++ b/utils/convert-macrogrid/Makefile.am
@@ -1,6 +1,5 @@
-bin_PROGRAMS = alugrid-convert-macrogrid main
+bin_PROGRAMS = convert
 
-alugrid_convert_macrogrid_SOURCES = main.cc
-main_SOURCES = main.cc
+convert_SOURCES = main.cc
 
 include $(top_srcdir)/am/global-rules
