add some missing files to the distribution
Former-commit-id: 00eec8ac732ec7e28a80822f07d78e4a9074b4db

--- a/examples/communication/Makefile.am
+++ b/examples/communication/Makefile.am
@@ -7,7 +7,7 @@ GRIDDIM = 3
 
 SUBDIRS = 
 
-#EXTRA_DIST = alugrid.cfg 
+EXTRA_DIST = check-communication.sh
 
 DATACLEANFILES = dgfparser.log
 CLEANFILES = $(DATACLEANFILES)
