--- a/utils/convert-macrogrid/Makefile.am
+++ b/utils/convert-macrogrid/Makefile.am
@@ -1,5 +1,8 @@
 bin_PROGRAMS = convert
 
+convertdir = $(includedir)/utils/convert-macrogrid
+convert_HEADERS = partition.hh
+
 convert_SOURCES = main.cc
 
 include $(top_srcdir)/am/global-rules
