revised loadBalanceHandle implementation. The Wrapper classes were removed because of to high maintanace overhead. There are only two implementation classes now, GatherScatterLoadBalance and GatherScatterLoadBalanceDataHandle.
Former-commit-id: 84e4f0275a7e3c5dfc709d22f96ecc0308eb66ff

--- a/dune/alugrid/3d/Makefile.am
+++ b/dune/alugrid/3d/Makefile.am
@@ -6,7 +6,7 @@ alu3dgrid_HEADERS = alu3dinclude.hh communication.hh \
   faceutility.hh faceutility_imp.cc geometry.hh geometry_imp.cc \
 	gridfactory.hh gridfactory.cc gridview.hh \
   indexsets.hh iterator.hh iterator.cc iterator_imp.cc alu3diterators.hh \
-  lbdatahandle.hh alugrid.hh
+  alugrid.hh
 
 headercheck_IGNORE = $(alu3dgrid_HEADERS)
 
