convert-macrogrid does not compile without ZOLTAN.
Disable building of the convert program without ZOLTAN, as this does not
work.


Former-commit-id: cf6d8e9e43d4140ddc189f756911ee2864b596e7

--- a/utils/convert-macrogrid/Makefile.am
+++ b/utils/convert-macrogrid/Makefile.am
@@ -1,4 +1,10 @@
-bin_PROGRAMS = convert
+bin_PROGRAMS =
+
+EXTRA_PROGRAMS = convert
+
+if ZOLTAN
+bin_PROGRAMS += $(EXTRA_PROGRAMS)
+endif
 
 convertdir = $(includedir)/utils/convert-macrogrid
 convert_HEADERS = partition.hh
