only use hsfc if Zoltan was found.
Former-commit-id: 93f10815d196514f4a8c9703cdade94e16ed2170

--- a/utils/convert-macrogrid/Makefile.am
+++ b/utils/convert-macrogrid/Makefile.am
@@ -1,10 +1,4 @@
-bin_PROGRAMS =
-
-EXTRA_PROGRAMS = convert
-
-if ZOLTAN
-bin_PROGRAMS += $(EXTRA_PROGRAMS)
-endif
+bin_PROGRAMS = convert
 
 convertdir = $(includedir)/utils/convert-macrogrid
 convert_HEADERS = partition.hh
