remove test from check program list
Former-commit-id: 2adc27d913ee7fbedf2243f0f8600c298de591d4

--- a/dune/alugrid/impl/test/Makefile.am
+++ b/dune/alugrid/impl/test/Makefile.am
@@ -1,4 +1,4 @@
-check_PROGRAMS = sizes backuprestore
+noinst_PROGRAMS = sizes backuprestore
 
 ALUSOURCES = \
   $(top_srcdir)/dune/alugrid/impl/binaryio.cc \
