make adapt example
Former-commit-id: d49d7f95735946e5b8667058b3e5dc390f437f6d

--- a/dune/alugrid/impl/test/Makefile.am
+++ b/dune/alugrid/impl/test/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = sizes backuprestore
+noinst_PROGRAMS = adapt backuprestore sizes
 
 ALUSOURCES = \
   $(top_srcdir)/dune/alugrid/impl/binaryio.cc \
@@ -26,6 +26,7 @@ ALUSOURCES = \
   $(top_srcdir)/dune/alugrid/impl/parallel/gitter_tetra_top_pll.cc
 
 sizes_SOURCES = sizes.cc $(ALUSOURCES) 
+adapt_SOURCES = adapt.cc $(ALUSOURCES) 
 backuprestore_SOURCES = backuprestore.cc $(ALUSOURCES) 
 
 include $(top_srcdir)/am/global-rules
