code cleanup, use getRealImplementation and remove unused typedefs.
Former-commit-id: 7e2e8574aaf31f0619ac269e707bd45541575d88

--- a/dune/alugrid/impl/Makefile.am
+++ b/dune/alugrid/impl/Makefile.am
@@ -3,6 +3,6 @@ impl_HEADERS = binaryio.hh byteorder.hh indexstack.h macrofileheader.hh projectv
 
 SUBDIRS = serial parallel duneinterface 2d test
 
-EXTRA_DIST = binaryio.cc macrofileheader.cc starmpi.c
+EXTRA_DIST = binaryio.cc macrofileheader.cc
 
 include $(top_srcdir)/am/global-rules
