--- a/utils/convert-macrogrid/Makefile.am
+++ b/utils/convert-macrogrid/Makefile.am
@@ -1,4 +1,4 @@
-check_PROGRAMS = convert
+EXTRA_PROGRAMS = convert
 
 convertdir = $(includedir)/utils/convert-macrogrid
 convert_HEADERS = partition.hh
