--- a/dune/alugrid/test/Makefile.am
+++ b/dune/alugrid/test/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = dgf
 
-check_PROGRAMS = test-alugrid test-geometries
-TESTS = test-alugrid test-geometries
+check_PROGRAMS = test-alugrid test-geometries test-entities
+TESTS = test-alugrid test-geometries test-entities
 
 AM_CPPFLAGS += $(DUNEMPICPPFLAGS)
 AM_LDFLAGS += $(DUNEMPILDFLAGS)
@@ -9,6 +9,7 @@ LDADD += $(DUNEMPILIBS)
 
 test_alugrid_SOURCES = test-alugrid.cc
 test_geometries_SOURCES = test-geometries.cc
+test_entities_SOURCES = test-entities.cc
 
 CLEANFILES = dgfparser.log
 
