--- a/dune/alugrid/test/Makefile.am
+++ b/dune/alugrid/test/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = dgf
 
-check_PROGRAMS = test-alugrid test-geometries test-entities
-TESTS = test-alugrid test-geometries test-entities
+check_PROGRAMS = test-alugrid test-geometries test-entities test-iterators
+TESTS = test-alugrid test-geometries test-entities test-iterators
 
 AM_CPPFLAGS += $(DUNEMPICPPFLAGS)
 AM_LDFLAGS += $(DUNEMPILDFLAGS)
@@ -10,6 +10,7 @@ LDADD += $(DUNEMPILIBS)
 test_alugrid_SOURCES = test-alugrid.cc
 test_geometries_SOURCES = test-geometries.cc
 test_entities_SOURCES = test-entities.cc
+test_iterators_SOURCES = test-iterators.cc
 
 CLEANFILES = dgfparser.log
 
