Fix install location of several files
Install autoconf tests and some headers to the correct location.

Signed-off-by: Martin Nolte <nolte@mathematik.uni-freiburg.de>

Former-commit-id: 49279fa0584f75b932eed705d15a9b1a23ccef56

--- a/dune/alugrid/impl/parallel/Makefile.am
+++ b/dune/alugrid/impl/parallel/Makefile.am
@@ -1,4 +1,4 @@
-paralleldir = dune/alugrid/impl/parallel
+paralleldir = $(includedir)/dune/alugrid/impl/parallel
 parallel_HEADERS = alumetis.hh alusfc.hh aluzoltan.hh \
 			gitter_hexa_top_pll.h gitter_pll_impl.h \
 			gitter_pll_ldb.h gitter_pll_mgb.h \
