--- a/utils/convert-macrogrid/Makefile.am
+++ b/utils/convert-macrogrid/Makefile.am
@@ -1,7 +1,6 @@
 EXTRA_PROGRAMS = convert
 
-convertdir = $(includedir)/utils/convert-macrogrid
-convert_HEADERS = partition.hh
+noinst_HEADERS = partition.hh
 
 convert_SOURCES = main.cc
 
