added test2d program
Former-commit-id: e9ffa9f7cb96afc4ebc0bdcda497a04a709616e8

--- a/dune/alugrid/impl/test/Makefile.am
+++ b/dune/alugrid/impl/test/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_PROGRAMS = adapt backuprestore sizes
+EXTRA_PROGRAMS = adapt backuprestore sizes test2d
 
 ALUSOURCES = \
   $(top_srcdir)/dune/alugrid/impl/binaryio.cc \
@@ -28,6 +28,7 @@ ALUSOURCES = \
 sizes_SOURCES = sizes.cc $(ALUSOURCES) 
 adapt_SOURCES = adapt.cc $(ALUSOURCES) 
 backuprestore_SOURCES = backuprestore.cc $(ALUSOURCES) 
+test2d_SOURCES = test2d.cc $(ALUSOURCES) 
 
 include $(top_srcdir)/am/global-rules
 
