added check for refinement rules.
Former-commit-id: 49b390449cfe911b8e6e31581588ce25562819ed

--- a/dune/alugrid/impl/test/Makefile.am
+++ b/dune/alugrid/impl/test/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_PROGRAMS = adapt backuprestore sizes
+EXTRA_PROGRAMS = adapt backuprestore sizes checkrefinement
 
 ALUSOURCES = \
   $(top_srcdir)/dune/alugrid/impl/binaryio.cc \
@@ -27,6 +27,7 @@ ALUSOURCES = \
 
 sizes_SOURCES = sizes.cc $(ALUSOURCES) 
 adapt_SOURCES = adapt.cc $(ALUSOURCES) 
+checkrefinement_SOURCES = checkrefinement.cc $(ALUSOURCES) 
 backuprestore_SOURCES = backuprestore.cc $(ALUSOURCES) 
 
 include $(top_srcdir)/am/global-rules
