remove 2d implementation for cleanup.
Former-commit-id: 2d139a55483a029b5713f6e53d988f6b3661059f

--- a/dune/alugrid/impl/CMakeLists.txt
+++ b/dune/alugrid/impl/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(impldir  ${CMAKE_INSTALL_INCLUDEDIR}/dune/alugrid/impl)
 set(impl_HEADERS  binaryio.hh byteorder.hh indexstack.h macrofileheader.hh projectvertex.h)
-set(SUBDIRS  serial parallel duneinterface 2d test)
+set(SUBDIRS  serial parallel duneinterface test)
 set(EXTRA_DIST  binaryio.cc macrofileheader.cc)
 # include not needed for CMake
 # include $(top_srcdir)/am/global-rules
