--- a/dune/alugrid/impl/Makefile.am
+++ b/dune/alugrid/impl/Makefile.am
@@ -1,7 +1,7 @@
 impldir = $(includedir)/dune/alugrid/impl
 impl_HEADERS = binaryio.hh byteorder.hh indexstack.h macrofileheader.hh projectvertex.h 
 
-SUBDIRS = serial parallel duneinterface 2d test
+SUBDIRS = serial parallel duneinterface test
 
 EXTRA_DIST = binaryio.cc macrofileheader.cc
 
