[cmake] copy dgf files to build directory
Former-commit-id: 43228ea577ae2f1723cf8d273c11014f1ebdd087

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SUBDIRS callback loadbalance backuprestore communication testEfficiency)
+set(SUBDIRS callback dgf loadbalance backuprestore communication testEfficiency)
 
 set(examplesdir  ${CMAKE_INSTALL_INCLUDEDIR}/examples)
 set(examples_HEADERS adaptation.hh  
