--- a/dune/alugrid/impl/parallel/CMakeLists.txt
+++ b/dune/alugrid/impl/parallel/CMakeLists.txt
@@ -3,7 +3,7 @@ set(parallel_HEADERS  alumetis.hh alusfc.hh aluzoltan.hh
                         gitter_hexa_top_pll.h gitter_pll_impl.h
                         gitter_pll_ldb.h gitter_pll_mgb.h
                         gitter_pll_sti.h gitter_tetra_top_pll.h mpAccess.h
-                        mpAccess_MPI.h mpAccess_MPI_inline.h)
+                        mpAccess_MPI.h mpAccess_MPI_inline.h zcurve.hh)
 set(EXTRA_DIST  gitter_hexa_top_pll.cc gitter_pll_idn.cc gitter_pll_impl.cc
                                                  gitter_pll_ldb.cc gitter_pll_mgb.cc gitter_pll_sti.cc
                                                  gitter_tetra_top_pll.cc mpAccess.cc)
