cleanup: remove trailing white spaces and some unused functions.
Former-commit-id: 9ca3f23a620bd7a4519a2a01cde04cf6fc44c8cb

--- a/dune/alugrid/impl/test/Makefile.am
+++ b/dune/alugrid/impl/test/Makefile.am
@@ -1,5 +1,9 @@
 EXTRA_PROGRAMS = adapt backuprestore sizes checkrefinement aluthreadsafety
 
+AM_CPPFLAGS += $(DUNEMPICPPFLAGS)
+AM_LDFLAGS += $(DUNEMPILDFLAGS)
+LDADD += $(DUNEMPILIBS)
+
 ALUSOURCES = \
   $(top_srcdir)/dune/alugrid/impl/binaryio.cc \
   $(top_srcdir)/dune/alugrid/impl/macrofileheader.cc \
