avoid these test to ba added to the cmake tests.
Former-commit-id: 0e968225c1083f72a391252c6e32c72ebc7203ae

--- a/dune/alugrid/impl/test/CMakeLists.txt
+++ b/dune/alugrid/impl/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-set(TESTS adapt 
-          backuprestore 
-          sizes)
+set(IMPLTESTS adapt 
+              backuprestore 
+              sizes)
 set(ALUSOURCES
   ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/binaryio.cc
   ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/macrofileheader.cc
@@ -36,15 +36,15 @@ add_executable(backuprestore backuprestore.cc ${ALUSOURCES})
 
 # include not needed for CMake
 # include $(top_srcdir)/am/global-rules
-foreach(i ${TESTS})
+foreach(i ${IMPLTESTS})
   target_link_libraries(${i} ${DUNE_LIBS} dunealugrid ${ZLIB_LIBRARIES})
   # libdunalugrid needs symbols from zoltan. Therefore we need to link
   # to Zoltan afterwards.
   add_dune_zoltan_flags(${i})
   add_test(${i} ${i})
-endforeach(i ${TESTS})
+endforeach(i ${IMPLTESTS})
 # We do not want want to build the tests during make all
 # but just build them on demand
 add_directory_test_target(_test_target)
-add_dependencies(${_test_target} ${TESTS} ${COMPILE_XFAIL_TESTS})
+add_dependencies(${_test_target} ${IMPLTESTS} ${COMPILE_XFAIL_TESTS})
 
