added threadsafety to targets.
Former-commit-id: fdfa9efef1567de2da1ec3cb65495487eecd0fa8

--- a/dune/alugrid/impl/test/CMakeLists.txt
+++ b/dune/alugrid/impl/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(TESTS adapt 
           backuprestore 
-          sizes)
+          sizes
+          threadsafety)
 set(ALUSOURCES
   ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/binaryio.cc
   ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/macrofileheader.cc
@@ -33,9 +34,10 @@ file(COPY alugrid.cfg grids
 add_executable(sizes sizes.cc ${ALUSOURCES})
 add_executable(adapt adapt.cc ${ALUSOURCES})
 add_executable(backuprestore backuprestore.cc ${ALUSOURCES})
+add_executable(threadsafety threadsafety.cc ${ALUSOURCES})
 
 foreach(i ${TESTS})
-  target_link_libraries(${i} ${DUNE_LIBS} dunealugrid ${ZLIB_LIBRARIES})
+  target_link_libraries(${i} ${ZLIB_LIBRARIES})
   # libdunalugrid needs symbols from zoltan. Therefore we need to link
   # to Zoltan afterwards.
   add_dune_zoltan_flags(${i})
