[cmake] dune-grid is required.
Former-commit-id: 4d030a4dd48bd9343edefd2f11eeaccf121b7a19

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ find_package(dune-common REQUIRED)
 list(APPEND CMAKE_MODULE_PATH ${dune-common_MODULE_PATH}
   "${PROJECT_SOURCE_DIR}/cmake/modules")
 
-find_package(dune-grid)
+find_package(dune-grid REQUIRED)
 list(APPEND CMAKE_MODULE_PATH ${dune-grid_MODULE_PATH}
   "${PROJECT_SOURCE_DIR}/cmake/modules")
 
