[bugfix] only append ZOLTAN_LIBRARIES, if set
Former-commit-id: 0bd692f373aa16ff84292e9f76a83968f9b030d2

--- a/dune/alugrid/test/CMakeLists.txt
+++ b/dune/alugrid/test/CMakeLists.txt
@@ -22,7 +22,10 @@ endforeach(i ${SUBDIRS})
 
 foreach(i ${TESTS})
   add_dune_mpi_flags(${i})
-  target_link_libraries(${i} ${DUNE_LIBS} dunealugrid ${ZLIB_LIBRARIES} ${ZOLTAN_LIBRARIES})
+  target_link_libraries(${i} ${DUNE_LIBS} dunealugrid ${ZLIB_LIBRARIES})
+  if( ZOLTAN_LIBRARIES )
+    target_link_libraries( ${i} ${ZOLTAN_LIBRARIES} )
+  endif()
   add_test(${i} ${i})
 endforeach(i ${TESTS})
 
